Care/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */

a.navbar-brand {
    white-space: normal;
    text-align: center;
    word-break: break-all;
}

/* Provide sufficient contrast against white background */
a {
    z-index: 999;
    color: black;
}

.animation_bg {
    height: 100%;
    position: relative;
    overflow: hidden;
}

.animation_overflow {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 1;
    transition: opacity 1s ease-in-out;
    transition-delay: 1s;
}

.carousel {
    height: 100%;
}

.carousel-inner {
    height: 100%;
}

.carousel-images-container {
    display: flex;
    justify-content: center;
    height: 100%;
}

    .carousel-images-container .carousel-item {
        height: 100%;
    }

    .carousel-images-container .carousel-item .carousel-background {
        max-height: 100%;
        height: 100%;
        width: 1850px;
        background-attachment: fixed;
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
    }

.carousel-image {
    max-height: 65%;
    height: 65%;
    width: 300px;
    margin: 0;
    position: absolute;
    top: 30%;
    transform: translate(-0%, -30%);
    background-position: center;
}

.first {
    border-radius: 30px;
    text-align: left;
    margin-left: 23%;
    background-image: url('/Images/admin.png');
}

.second {
    border-radius: 50px 20px;
    float: right;
    margin-left: 42%;
    background-image: url('/Images/woman.png');
}

.third {
    border-radius: 20px 50px;
    text-align: right;
    margin-left: 61%;
    background-image: url('/Images/woman.png');
}

.carousel-control-next {
    right: 180px !important;
}

.carousel-control-prev {
    left: 180px !important;
}

.content {
    position: absolute;
    bottom: 3.6rem;
    width: 100%;
    font-size: 1.4rem;
}

.title {
    font-size: calc(2.5vw);
    text-transform: uppercase;
    margin-left: -10%;
}

.info-line {
    display: inline-block;
    margin-left: 6.4%;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

.btn-login {
    color: #fff;
    background-color: #2ec4b6;
    border-radius: 15px;
    width: 25%;
}

.button {
    cursor: pointer;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 11px;
    color: #ffffff;
    text-decoration: none;
    transition: all 0.3s ease;
    border-radius: 99px;
    -moz-border-radius: 99px;
    -webkit-border-radius: 99px;
}

.button:hover {
    text-decoration: none;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

.border-top {
    border-top: 1px solid #e5e5e5;
}

.border-bottom {
    border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
    font-size: 1rem;
    line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
    height: 100%;
}

.body-content {
    padding-left: 0px;
    padding-right: 0px;
    height: 80%;
}

.auth-page {
    background-image: url('../Images/auth-page.png');
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    text-align: center;
    margin: auto;
    padding: 0;
    height: 100%;
}

.container {
    height: 100%;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    white-space: nowrap;
}

@font-face {
    font-family: "Special Elite";
    src: url("../Fonts/SpecialElite-Regular.ttf");
}

.special-elite {
    font-family: 'Special Elite';
}

